--- a/glossaire.html
+++ b/glossaire.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Glossaire</title>
+    <title>Campagne</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -10,15 +10,12 @@
 
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="./bda.png" alt="logo">
-                </a>
+            <div>
+                <img class="center" src="./bda.png" alt="logo">
             </div>
         </nav>
     </header>
-
-    <h1>Prenez moi au pole site svp</h1>
+    <h1 class="center">Campagne de Antonin au poste de Vice-Président :</h1>
 
     <script src="../javascript/script.js"></script>
 </body>
