--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BDA.COM</title>
+    <title>Antonin VP</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./bda.png">
 </head>
@@ -18,7 +18,7 @@
         <div class="content-wrap">
             <div class="msg-wrap">
                 <img src="./cookie.png" alt="cookie">
-                <p>Le BDA a besoin de vos cookies</p>
+                <p>Votre futur VP a besoin de pleins de cookies</p>
                 <div style="text-align: center;">
                     <button style="font-size: 100%; background-color: #ffecb4; border-width: 1px; border-radius: 5px; cursor: pointer;" onclick="acceptCookieConsent();">Donner</button>
                 </div>
@@ -38,70 +38,176 @@
                     </div>
                     <div class="liens">
                         <ul>
-                            <li class="li-nav"><a href="#info" class="lien">Qu'est-ce ?</a></li>
-                            <li class="li-nav"><a href="#nous" class="lien">Qui ?</a></li>
-                            <li class="li-nav"><a href="#soutenir" class="lien">Ou ?</a></li>
-                            <li class="li-nav"><a href="#aide" class="lien">Quand ?</a></li>
-                            <li class="li-nav"><a href="#pourquoi" class="lien">Pourquoi ?</a></li>
+                            <li class="li-nav"><a href="#nous" class="lien">Qui suis-je ?</a></li>
+                            <li class="li-nav"><a href="#info" class="lien">Pourquoi ?</a></li>
+                            <li class="li-nav"><a href="#aide" class="lien">Le Buro</a></li>
+                            <li class="li-nav"><a href="#pourquoi" class="lien">Quel est le programme ?</a></li>
                         </ul>
                     </div>
                 </nav>
             </header>
 
             <div class="titre">
-                <span class="txt-rotate" data-period="2000" data-rotate='["<br> Le BDA à besoin de vous !",
-                            "<br> PRENEZ ANTONIN AU POLE SITE !"]'>
+                <span class="txt-rotate" data-period="2000" data-rotate='["<br> Le BDA à besoin de Antonin :)",
+                            "<br> Antonin le meilleur VP !!!",
+                            "<br> Votez Antonin SVP"]'>
                 </span>
             </div>
 
             </br>
 
             <div>
-                <button onclick="location.href='formulaire.html'" class="mainbtn">Candidater</button>
+                <a class="mainbtn" href="https://docs.google.com/forms/d/e/1FAIpQLSef9jojL1WonMWd6gELjOol50PYErPsP8TQ5PhySbNILxEmBg/viewform?usp=dialog">Voter</a>
             </div>
 
-            <div>
-                <button id="modeBtn" class="modebtn">clair/sombre</button>
-            </div>
-
-        </div>
-
-        <div id="info" class="mainpage2">
-            <h1 class="titre">Qu'est-ce que le BDA ?</h1>
-            <br>
-            <p class="paragraphe">Le BDA ou "Bureau des arts est l'asso des arts de Dauphine" <br>
-                blablablablablabla blabla blablabla blabla bla blablablabla <br>
-                blablablablablabla blabla blablabla blabla bla blablablabla <br>
-                blablablablablabla blabla blablabla blabla bla blablablabla </p>
-
-            <div class="center">
-                <a class="mini-btn" onclick="location.href='historique.html'">Nos Projets</a>
-            </div>
         </div>
 
         <div id="nous" class="mainpage3">
-            <h1 class="titre">Qui somme nous ?</h1>
+            <h1 class="titre">Qui suis-je ?</h1>
 
             <div class="carrousel">
 
                 <p onclick="plusslides(-1)" class="carrousel-btn">&#10094;</p>
 
                 <div class="unslide">
-                    <p>Antonin, le MEILLEUR newbie et futur membre du pole site</p>
-                    <a href="https://fr.wikipedia.org/wiki/Idiot_utile" target="_blank">Wikipedia🔗</a>
+                    <p>Antonin, le MEILLEUR newbie et futur VP du BDA</p>
+                    <a href="https://fr.wikipedia.org/wiki/Vice-pr%C3%A9sident#:~:text=Un%20vice%2Dpr%C3%A9sident%20est%2C%20selon,titre%20%C2%AB%20adjoint%20au%20pr%C3%A9sident%20%C2%BB." target="_blank">Voir Plus🔗</a>
                     <img src="./Antonin.jpg" class="proportion_image" class="unslide-img">
                 </div>
 
                 <div class="unslide">
-                    <p>Fleur, notre présidente adorée</p>
-                    <a href="https://fr.wikipedia.org/wiki/Idiot_utile" target="_blank">Facebook🔗</a>
-                    <img src="./Fleur.jpg" class="proportion_image" class="unslide-img">
+                    <p>Ma sélection de résidences accessibles pour les BDAstes</p>
+                    <a href="https://fr.wikipedia.org/wiki/Fortun%C3%A9" target="_blank">Voir Plus🔗</a>
+                    <img src="./Design sans titre.png" class="proportion_image" class="unslide-img">
                 </div>
 
                 <div class="unslide">
-                    <p>Lucie, la marraine pole site de Antonin</p>
-                    <a href="https://fr.wikipedia.org/wiki/Idiot_utile" target="_blank">Facebook🔗</a>
-                    <img src="./Lucie.jpg" class="proportion_image" class="unslide-img">
+                    <p>Beaucoup de qualitées : 
+                        <br>
+                        1.           Accessible
+
+                        2.           Accueillant (e)
+                        <br>
+
+                        3.           Adroit(e)
+
+                        4.           Agréable
+                        <br>
+
+                        5.           Aidant(e)
+
+                        6.           Aimable
+                        <br>
+
+                        7.           Altruiste
+
+                        8.           Ambitieux (euse)
+                        <br>
+
+                        9.           Amusant(e)
+
+                        10.         Apaisant(e)
+                        <br>
+
+                        11.         Résilient(e)
+
+                        12.         Appliqué(e)
+                        <br>
+
+                        13.         Assertif(ive)
+
+                        14.         Astucieux(euse)
+                        <br>
+
+                        15.         Attachant
+
+                        16.         Attentif(ive)
+                        <br>
+
+                        17.         Attentionné(e)
+
+                        18.         Audacieux(euse)
+                        <br>
+
+                        19.         Autonome
+
+                        20.         Avenant(e)
+                        <br>
+
+                        21.         Aventureux(euse)
+
+                        22.         Beau(belle!)
+                        <br>
+
+                        23.         Bienveillant(e)
+
+                        24.         Brillant(e)
+                        <br>
+
+                        25.         Calme
+
+                        26.         Captivant(e)
+                        <br>
+
+                        27.         Chaleureux
+
+                        28.         Charismatique
+                        <br>
+
+                        29.         Charmant(e)
+
+                        30.         Combatif(ive)
+                        <br>
+
+                        31.         Communicatif(ive)
+
+                        32.         Compréhensif(ive)
+                        <br>
+
+                        33.         Concentré (capacité à être)
+
+                        34.         Conciliant(e)
+                        <br>
+
+                        35.         Confiant(e)
+
+                        36.         Conformiste
+                        <br>
+
+                        37.         Consciencieux
+
+                        38.         Convaincant(e)
+                        <br>
+
+                        39.         Coopératif(ive)
+
+                        40.         Courageux(euse)
+                        <br>
+
+                        41.         Courtois(e)
+
+                        42.         Créatif(ive)
+                        <br>
+
+                        43.         Cultivé(e)
+
+                        44.         Curieux(euse)
+                        <br>
+
+                        45.         Débrouillard(e)
+
+                        46.         Décidé(e)
+                        <br>
+
+                        47.         Délicat(e)
+
+                        48.         Déterminé(e)
+                        <br>
+
+                        49.         Dévoué(e)
+
+                        50.         Digne de confiance
+                    </p>
                 </div>
 
                 <p onclick="plusslides(1)" class="carrousel-btn">&#10095;</p>
@@ -110,36 +216,30 @@
 
         </div>
 
-        <div id="soutenir" class="mainpage4">
-            <h1 class="titre">Ou est le BDA ?</h1>
-            <p class="paragraphe">Découvrez le BDA en B008 au rez de chausser de Dauphine <br>
-                <br>
-            VIENDEZ NOUS VOIR ;)</p>
-
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0fSP3qoS0QY?si=6nHto1aKcNxS5AMU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+        <div id="info" class="mainpage2">
+            <h1 class="titre">Pourquoi est-ce que je me présente ?</h1>
+            <br>
+            <p class="paragraphe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deserunt excepturi nesciunt reprehenderit. Esse eius, ipsa consectetur harum laborum fugit error asperiores minima commodi nisi inventore similique numquam obcaecati aliquid.</p>
         </div>
 
         <div id="aide" class="mainpage5">
-            <h1 class="titre">Quand ?</h1>
+            <h1 class="titre">Le futur Buro du BDA (AAA) :</h1>
 
-            <p class="paragraphe">De 17h à 20h le vendredi, au tiparc</p>
-
-            <div class="center">
-                <img class="plan" src="./plan.png" alt="">
-            </div>
+            <p class="paragraphe">Présidente : Alexia / Lisa / Sarah
+                <br><br>
+                Vice Président/te : Antonin / Lisa / Sarah
+                <br><br>
+                Trésorier/ère : Adam / Marylise
+            </p>
 
         </div>
 
         <div id="pourquoi" class="mainpage2">
-            <h1 class="titre">Pourquoi le pole site ?</h1>
-            <p class="paragraphe">Antonin souhaite rejoindre le BDA pour proliférer une tradition de travail et d'inplication au sein du bda portée par le pole site depuis des années</p>
-
+            <h1 class="titre">Allez voir mon programme en cliquant ICI</h1>
+            <p class="paragraphe">👇👇👇</p>
             <br>
-
             <div class="center">
-                <a class="mini-btn" onclick="location.href='glossaire.html'">Voir sa campagne</a>
+                <a class="mini-btn" onclick="location.href='glossaire.html'">Voir mon programme</a>
             </div>
         </div>
 
