--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="unslide">
                     <p>Antonin, le MEILLEUR newbie et futur VP du BDA</p>
                     <a href="https://fr.wikipedia.org/wiki/Vice-pr%C3%A9sident#:~:text=Un%20vice%2Dpr%C3%A9sident%20est%2C%20selon,titre%20%C2%AB%20adjoint%20au%20pr%C3%A9sident%20%C2%BB." target="_blank">Voir Plus🔗</a>
-                    <img src="./Antonin.jpg" class="proportion_image" class="unslide-img">
+                    <img src="./Antonin.png" class="proportion_image" class="unslide-img">
                 </div>
 
                 <div class="unslide">
