--- a/index.html
+++ b/index.html
@@ -86,67 +86,67 @@
                         <br>
                         1.           Accessible
 
-                        2.           Accueillant (e)
+                        2.           Accueillant
                         <br>
 
-                        3.           Adroit(e)
+                        3.           Adroit
 
                         4.           Agréable
                         <br>
 
-                        5.           Aidant(e)
+                        5.           Aidant 
 
                         6.           Aimable
                         <br>
 
                         7.           Altruiste
 
-                        8.           Ambitieux (euse)
+                        8.           Ambitieux  
                         <br>
 
-                        9.           Amusant(e)
+                        9.           Amusant 
 
-                        10.         Apaisant(e)
+                        10.         Apaisant 
                         <br>
 
-                        11.         Résilient(e)
+                        11.         Résilient 
 
-                        12.         Appliqué(e)
+                        12.         Appliqué 
                         <br>
 
-                        13.         Assertif(ive)
+                        13.         Assertif 
 
-                        14.         Astucieux(euse)
+                        14.         Astucieux 
                         <br>
 
                         15.         Attachant
 
-                        16.         Attentif(ive)
+                        16.         Attentif 
                         <br>
 
-                        17.         Attentionné(e)
+                        17.         Attentionné 
 
-                        18.         Audacieux(euse)
+                        18.         Audacieux 
                         <br>
 
                         19.         Autonome
 
-                        20.         Avenant(e)
+                        20.         Avenant 
                         <br>
 
-                        21.         Aventureux(euse)
+                        21.         Aventureux 
 
                         22.         Beau(belle!)
                         <br>
 
-                        23.         Bienveillant(e)
+                        23.         Bienveillant 
 
-                        24.         Brillant(e)
+                        24.         Brillant 
                         <br>
 
                         25.         Calme
 
-                        26.         Captivant(e)
+                        26.         Captivant 
                         <br>
 
                         27.         Chaleureux
@@ -154,57 +154,57 @@
                         28.         Charismatique
                         <br>
 
-                        29.         Charmant(e)
+                        29.         Charmant 
 
-                        30.         Combatif(ive)
+                        30.         Combatif 
                         <br>
 
-                        31.         Communicatif(ive)
+                        31.         Communicatif 
 
-                        32.         Compréhensif(ive)
+                        32.         Compréhensif 
                         <br>
 
                         33.         Concentré (capacité à être)
 
-                        34.         Conciliant(e)
+                        34.         Conciliant 
                         <br>
 
-                        35.         Confiant(e)
+                        35.         Confiant 
 
                         36.         Conformiste
                         <br>
 
                         37.         Consciencieux
 
-                        38.         Convaincant(e)
+                        38.         Convaincant 
                         <br>
 
-                        39.         Coopératif(ive)
+                        39.         Coopératif 
 
-                        40.         Courageux(euse)
+                        40.         Courageux 
                         <br>
 
-                        41.         Courtois(e)
+                        41.         Courtois 
 
-                        42.         Créatif(ive)
+                        42.         Créatif 
                         <br>
 
-                        43.         Cultivé(e)
+                        43.         Cultivé 
 
-                        44.         Curieux(euse)
+                        44.         Curieux 
                         <br>
 
-                        45.         Débrouillard(e)
+                        45.         Débrouillard 
 
-                        46.         Décidé(e)
+                        46.         Décidé 
                         <br>
 
-                        47.         Délicat(e)
+                        47.         Délicat 
 
-                        48.         Déterminé(e)
+                        48.         Déterminé 
                         <br>
 
-                        49.         Dévoué(e)
+                        49.         Dévoué 
 
                         50.         Digne de confiance
                     </p>
@@ -219,7 +219,15 @@
         <div id="info" class="mainpage2">
             <h1 class="titre">Pourquoi est-ce que je me présente ?</h1>
             <br>
-            <p class="paragraphe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deserunt excepturi nesciunt reprehenderit. Esse eius, ipsa consectetur harum laborum fugit error asperiores minima commodi nisi inventore similique numquam obcaecati aliquid.</p>
+            <p class="paragraphe">Je serai un vice président compétent et impliqué qui saura faire aussi bien (voir mieux) que notre chère vice présidente actuelle
+                <br><br>
+                Mon <a href="#pourquoi">PROGRAMME</a> est INCROYABLE, mais surtout il est réalisable et je <b>vous</b> que l'intégralité de ce programme sera mis en place si j'atteint ce poste.
+                <br> <br>
+                Mais ça n'est pas tout, en tant que vice président je serai à <b>votre</b> écoute et <b>vos</b> idées perniantes seront réalisées ! (ceci n'est pas une dédvaluation du pourvoir du bureau mais une plus grande inclusivité de celui-ci vis a vis des autres BDAstes)
+                <br>
+                <br>
+                Pour un BDA plus BDA, VOTEZ ANTONIN !
+            </p>
         </div>
 
         <div id="aide" class="mainpage5">
