--- a/glossaire.html
+++ b/glossaire.html
@@ -4,6 +4,7 @@
 <head>
     <title>Campagne</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./bda.png">
 </head>
 
 <body>
