--- a/index.html
+++ b/index.html
@@ -219,13 +219,12 @@
         <div id="info" class="mainpage2">
             <h1 class="titre">Pourquoi est-ce que je me présente ?</h1>
             <br>
-            <p class="paragraphe">Je serai un vice président compétent et impliqué qui saura faire aussi bien (voir mieux) que notre chère vice présidente actuelle
-                <br><br>
-                Mon <a href="#pourquoi">PROGRAMME</a> est INCROYABLE, mais surtout il est réalisable et je <b>vous</b> que l'intégralité de ce programme sera mis en place si j'atteint ce poste.
+            <p class="paragraphe">Je serai un vice président compétent et impliqué qui saura faire un aussi bon (voire meilleur) travail que notre chère vice présidente actuelle
                 <br> <br>
-                Mais ça n'est pas tout, en tant que vice président je serai à <b>votre</b> écoute et <b>vos</b> idées perniantes seront réalisées ! (ceci n'est pas une dédvaluation du pourvoir du bureau mais une plus grande inclusivité de celui-ci vis a vis des autres BDAstes)
-                <br>
-                <br>
+                Mon <a href="#pourquoi">PROGRAMME</a> est INCROYABLE, mais surtout il est réalisable et je <b>vous</b> garantis que l'intégralité de ce programme sera mis en place si j'atteins ce poste.
+                <br> <br>
+                Mais ça n'est pas tout, en tant que vice président je serai à <b>votre</b> écoute et <b>vos</b> idées pertinantes seront réalisées !
+                <br> <br>
                 Pour un BDA plus BDA, VOTEZ ANTONIN !
             </p>
         </div>
