--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <br> <br>
                 Mon <a href="#pourquoi">PROGRAMME</a> est INCROYABLE, mais surtout il est réalisable et je <b>vous</b> garantis que l'intégralité de ce programme sera mis en place si j'atteins ce poste.
                 <br> <br>
-                Mais ça n'est pas tout, en tant que vice président je serai à <b>votre</b> écoute et <b>vos</b> idées pertinantes seront réalisées !
+                Mais ça n'est pas tout, en tant que vice président je serai à <b>votre</b> écoute et <b>vos</b> idées pertinentes seront réalisées !
                 <br> <br>
                 Pour un BDA plus BDA, VOTEZ ANTONIN !
             </p>
