--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="unslide">
                     <p>Ma sélection de résidences accessibles pour les BDAstes</p>
                     <a href="https://fr.wikipedia.org/wiki/Fortun%C3%A9" target="_blank">Voir Plus🔗</a>
-                    <img src="./Design sans titre.png" class="proportion_image" class="unslide-img">
+                    <img src="./maison.png" class="proportion_image" class="unslide-img">
                 </div>
 
                 <div class="unslide">
