--- a/glossaire.html
+++ b/glossaire.html
@@ -18,6 +18,16 @@
     </header>
     <h1 class="center">Campagne de Antonin au poste de Vice-Président :</h1>
 
+    <div class="campagne">
+        <ul>
+            <li>Pendant les vacances, mise en relation de tous les responsables de pôles avec le bureau pour créer des PDF explicatifs de chacun des pôles (tutoriels pour le site, aide pour la mise en place des événements, idées derrière l'événement...). Ces documents seront utiles pour les prochaines éditions de chaque événement, et surtout pour les prochains newbies</li>
+            <li>Création des vêtements BDA, la veste de recrutement ainsi qu'un maillot de bain pour le trailer, une cuitochette pour se taper ses meilleurs crous express et bien d'autres (j'attends vos idées)</li>
+            <li>DOUBLE semaine newbie dans ma maison de vacances dans le sud, avec au programme : sortie bateau, promenades dans les calanques, pool party, parc d’attraction et plein d'autres surprises</li>
+            <li>Soirée d'intégration inédite dans mon appartement (+ ma chambre de bonne) pour faire vivre à nos nouveaux newbs la VRAIE expérience BDA</li>
+            <li>Nouvel évènement mystère : pour accéder à cet évènement, il faut finir le jeu de piste qui commence <a href="./jeu.html">ICI</a></li>
+        </ul>
+    </div>
+
     <script src="../javascript/script.js"></script>
 </body>
 
