--- a/glossaire.html
+++ b/glossaire.html
@@ -24,6 +24,7 @@
             <li>Création des vêtements BDA, la veste de recrutement ainsi qu'un maillot de bain pour le trailer, une cuitochette pour se taper ses meilleurs crous express et bien d'autres (j'attends vos idées)</li>
             <li>DOUBLE semaine newbie dans ma maison de vacances dans le sud, avec au programme : sortie bateau, promenades dans les calanques, pool party, parc d’attraction et plein d'autres surprises</li>
             <li>Soirée d'intégration inédite dans mon appartement (+ ma chambre de bonne) pour faire vivre à nos nouveaux newbs la VRAIE expérience BDA</li>
+            <li>Bus Boîte d'intégration BDA pour fêter en beauté l’arrivée des newbs dans notre famille pendant la période de défis. Cette soirée sera très loin d'être la seule de la période des défis, avec moi au bureau on va les régaler</li>
             <li>Nouvel évènement mystère : pour accéder à cet évènement, il faut finir le jeu de piste qui commence <a href="./jeu.html">ICI</a></li>
         </ul>
     </div>
