--- a/glossaire.html
+++ b/glossaire.html
@@ -12,20 +12,29 @@
     <header>
         <nav>
             <div>
-                <img class="center" src="./bda.png" alt="logo">
+                <a href="./index.html"><img class="center" src="./bda.png" alt="logo"></a>
             </div>
         </nav>
     </header>
-    <h1 class="center">Campagne de Antonin au poste de Vice-Président :</h1>
+    <h1 class="center">Campagne de Antonin au poste de Vice-Président : <a href="https://www.instagram.com/antonin_meilleur_vp/"><img src="https://static.cdninstagram.com/rsrc.php/v4/yI/r/VsNE-OHk_8a.png" alt="insta"></a></h1>
 
     <div class="campagne">
         <ul>
-            <li>Pendant les vacances, mise en relation de tous les responsables de pôles avec le bureau pour créer des PDF explicatifs de chacun des pôles (tutoriels pour le site, aide pour la mise en place des événements, idées derrière l'événement...). Ces documents seront utiles pour les prochaines éditions de chaque événement, et surtout pour les prochains newbies</li>
-            <li>Création des vêtements BDA, la veste de recrutement ainsi qu'un maillot de bain pour le trailer, une cuitochette pour se taper ses meilleurs crous express et bien d'autres (j'attends vos idées)</li>
-            <li>DOUBLE semaine newbie dans ma maison de vacances dans le sud, avec au programme : sortie bateau, promenades dans les calanques, pool party, parc d’attraction et plein d'autres surprises</li>
-            <li>Soirée d'intégration inédite dans mon appartement (+ ma chambre de bonne) pour faire vivre à nos nouveaux newbs la VRAIE expérience BDA</li>
-            <li>Bus Boîte d'intégration BDA pour fêter en beauté l’arrivée des newbs dans notre famille pendant la période de défis. Cette soirée sera très loin d'être la seule de la période des défis, avec moi au bureau on va les régaler</li>
+            <li>Organisation : Pendant les vacances, mise en relation de tous les responsables de pôles avec le bureau pour créer des PDF explicatifs de chacun des pôles (tutoriels pour le site, aide pour la mise en place des événements, idées derrière l'événement...). Ces documents seront utiles pour les prochaines éditions de chaque événement, et surtout pour les prochains newbies</li>
+            <br>
+            <li>Création des vêtements BDA : la veste de recrutement ainsi qu'un maillot de bain pour le trailer, une cuitochette pour se taper ses meilleurs crous express et bien d'autres (j'attends vos idées)</li>
+            <br>
+            <li>La DOUBLE Semaine Newbie : dans ma maison de vacances dans le sud, avec au programme : sortie bateau, promenades dans les calanques, pool party, parc d’attractions et plein d'autres surprises</li>
+            <br>
+            <li>La Soirée d'intégration : une soirée inédite dans mon appartement (+ ma chambre de bonne) pour faire vivre à nos nouveaux newbs la VRAIE expérience BDA</li>
+            <br>
+            <li>Le BB-BDA : Bus Boîte d'intégration BDA (pour les nouveaux bb du bda) pour fêter en beauté l’arrivée des newbs dans notre famille pendant la période de défis. Cette soirée sera très loin d'être la seule de la période des défis, avec moi au bureau on va les régaler ces newbies</li>
+            <br>
             <li>Nouvel évènement mystère : pour accéder à cet évènement, il faut finir le jeu de piste qui commence <a href="./jeu.html">ICI</a></li>
+            <br>
+            <li>Le BD-GALA : Un week-end gala BDA, pour réunir TOUT le BDA sur le plus de générations possibles de manière plus familiale qu'un wei. Une évènement plus attractif pour nos dinos préférés et tout aussi excitant pour la jeunesse</li>
+            <br>
+            <li>Et bien plus encore, VOS suggestions (buralistes ou non) seront les meilleures !</li>
         </ul>
     </div>
 
