--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <div class="titre">
                 <span class="txt-rotate" data-period="2000" data-rotate='["<br> Le BDA à besoin de Antonin :)",
                             "<br> Antonin le meilleur VP !!!",
-                            "<br> Votez Antonin SVP"]'>
+                            "<br> Votez Antonin SVP",
+                            "<br> Antonin à besoin de sa femme au buro"]'>
                 </span>
             </div>
 
