--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
         <div id="aide" class="mainpage5">
             <h1 class="titre">Le futur Buro du BDA (AAA) :</h1>
 
-            <p class="paragraphe">Présidente : Alexia / Lisa / Sarah
+            <p class="paragraphe">Présidente : <a href="./caca.jpeg">Alexia</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./caca.jpeg">Sarah</a>
                 <br><br>
-                Vice Président/te : Antonin / Lisa / Sarah
+            Vice Président/te : <a href="https://www.instagram.com/antonin_meilleur_vp/">Antonin</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./caca.jpeg">Sarah</a>
                 <br><br>
-                Trésorier/ère : Adam / Marylise
+                Trésorier/ère : <a href="./caca.jpeg">Adam</a> / <a href="./caca.jpeg">Marylise</a>
             </p>
 
         </div>
