--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
             <p class="paragraphe">Présidente : <a href="./caca.jpeg">Alexia</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./Sarah.jpeg">Sarah</a>
                 <br><br>
-            Vice Président/te : <a href="https://www.instagram.com/antonin_meilleur_vp/">Antonin</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./Sarah.jpeg">Sarah</a>
+            Vice Président/te : <a href="https://www.instagram.com/antonin_meilleur_vp/">Antonin</a> / (<a href="./Lisa.jpeg">Lisa</a>) / (<a href="./Sarah.jpeg">Sarah</a>)
                 <br><br>
                 Trésorier/ère : <a href="./caca.jpeg">Adam</a> / <a href="./caca.jpeg">Marylise</a>
             </p>
