--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div id="aide" class="mainpage5">
             <h1 class="titre">Le futur Buro du BDA (AAA) :</h1>
 
-            <p class="paragraphe">Présidente : <a href="./caca.jpeg">Alexia</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./Sarah.jpeg">Sarah</a>
+            <p class="paragraphe">Présidente : <a href="./MonAmour.png">Alexia</a> / <a href="./Lisa.jpeg">Lisa</a> / <a href="./Sarah.jpeg">Sarah</a>
                 <br><br>
             Vice Président/te : <a href="https://www.instagram.com/antonin_meilleur_vp/">Antonin</a> / (<a href="./Lisa.jpeg">Lisa</a>) / (<a href="./Sarah.jpeg">Sarah</a>)
                 <br><br>
