--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <br><br>
             Vice Président/te : <a href="https://www.instagram.com/antonin_meilleur_vp/">Antonin</a> / (<a href="./Lisa.jpeg">Lisa</a>) / (<a href="./Sarah.jpeg">Sarah</a>)
                 <br><br>
-                Trésorier/ère : <a href="./caca.jpeg">Adam</a> / <a href="./Marylise.jpeg">Marylise</a>
+                Trésorier/ère : <a href="./Aden.jpeg">Adam</a> / <a href="./Marylise.jpeg">Marylise</a>
             </p>
 
         </div>
