--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
             </header>
 
             <div class="titre">
-                <span class="txt-rotate" data-period="2000" data-rotate='["<br> Le BDA à besoin de Antonin :)",
-                            "<br> Antonin le meilleur VP !!!",
-                            "<br> Votez Antonin SVP",
-                            "<br> Antonin à besoin de sa femme au buro"]'>
-                </span>
+                <p>LA BOUTIQUE EST OUVERTE : <a href="./boutique.html">Boutique BDA</a></p>
             </div>
 
             </br>
