--- a/boutique.html
+++ b/boutique.html
@@ -17,7 +17,7 @@
       color: white;
       padding: 1rem 2rem;
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 6rem;
     }
 
     .products {
@@ -84,28 +84,29 @@
 <body>
 
   <header>
-    Boutique en ligne
+    <a href="index.html"><img class="bdalogo" src="./bda.png" alt="logo" width="100px"></a>
+    Boutique du BDA
   </header>
 
   <section class="products">
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150" alt="Produit 1">
-      <div class="product-title">Produit 1</div>
-      <div class="product-price">19,99 €</div>
+      <img src="./1.png" alt="Produit 1">
+      <div class="product-title">Tote Bag BDA</div>
+      <div class="product-price">2,99 €</div>
       <button class="buy-button">Acheter</button>
     </div>
 
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150" alt="Produit 2">
-      <div class="product-title">Produit 2</div>
-      <div class="product-price">29,99 €</div>
+      <img src="./2.png" alt="Produit 2">
+      <div class="product-title">Ouvre Bouteille BDA</div>
+      <div class="product-price">0,75 €</div>
       <button class="buy-button">Acheter</button>
     </div>
 
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150" alt="Produit 3">
-      <div class="product-title">Produit 3</div>
-      <div class="product-price">39,99 €</div>
+      <img src="./3.png" alt="Produit 3">
+      <div class="product-title">Cuitochette BDA</div>
+      <div class="product-price">2,99 €</div>
       <button class="buy-button">Acheter</button>
     </div>
   </section>
