--- a/boutique.html
+++ b/boutique.html
@@ -111,5 +111,21 @@
     </div>
   </section>
 
+  <div class="product-card">
+      <img src="./4.png" alt="Produit 4">
+      <div class="product-title">Short de bain BDA</div>
+      <div class="product-price">19,99 €</div>
+      <button class="buy-button">Acheter</button>
+    </div>
+  </section>
+
+  <div class="product-card">
+      <img src="./5.png" alt="Produit 5">
+      <div class="product-title">Bikini BDA</div>
+      <div class="product-price">19,99 €</div>
+      <button class="buy-button">Acheter</button>
+    </div>
+  </section>
+
 </body>
 </html>
